<resources>
    <string name="app_name">S20240323-ShuchiSinha-NYCSchools</string>
    <string name="school_description">Description</string>
    <string name="school_name">School Name</string>
    <string name="sat_test_scores_title">SAT Test Scores</string>
    <string name="sat_scores_loading_text">Loading....</string>
    <string name="school_location_button">Directions</string>
    <string name="school_website_button">School Website</string>
    <string name="nyc_schools_title">NYC Schools</string>
    <string name="menu_refresh">Refresh</string>
    <string name="action_search">Search</string>
</resources>